tests/NormalTests/paczka1/fuzzy1/50978450.err
Error in line 16: UxPd S867 80,2
Error in line 30: S43 S162 763,4
Error in line 32: kUk7 S43 76u8
Error in line 29: O1whpFVEwp S162 136,2
Error in line 31: S43 S867 1,7
